# project-cod

./: .env.example  Dockerfile  arp_monitor.py  compose.debug.yaml  file_crypto (1).py  interactive_runner_multi.py  main.py  requirements.txt
ab1/: app.py  json_storage.py
ab1/data/: users.json
ab1/models/: product.py  user.py
ab1/repositories/: product_repository.py  user_repository.py
ab1/templates/: index.html
cccoooddd/: server.js  код1
config.py/: alerting.py  arp_monitor1.py  config.py  correlator.py  dashboard.py  file_handler.py  http_sniffer1.py  logger_setup.py  pcap_manager.py  resource_monitor.py  run_monitor.py  simulator.py  utils.py  whitelist.json
main1/: Dockerfile  docker-compose.yml  import os.py  log_utils.py  main.py  net_control.py  net_isolator.py  simple_vote_site.py
my-python-project.py/: README.md  http_sniffer.py  pyproject.toml  requirements.txt
my-python-project.py/src/: app.py
my-python-project.py/src/routes/: __init__.py
my-python-project.py/tests/: test_app.py
security_logs/: arp_log.txt  http_log.txt
tests/: test_main.py
