[tool.poetry]
name = "my-python-project"
version = "0.1.0"
description = "A Flask application"
authors = ["Your Name <youremail@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
flask = "^2.0"
# Add other dependencies here

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"